# fvCapture

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: docs.yml  release.yml
crates/fv_capture_cli/: Cargo.toml
crates/fv_capture_cli/src/: main.rs
crates/fv_capture_core/: Cargo.toml
crates/fv_capture_core/src/: config.rs  lib.rs
crates/fv_capture_core/src/capture/: mod.rs
crates/fv_capture_core/src/encoder/: mod.rs
crates/fv_capture_core/src/input/: key_normalizer.rs  mod.rs
crates/fv_capture_core/src/overlay/: mod.rs
crates/fv_capture_core/src/project/: mod.rs
crates/fv_capture_gui/: Cargo.toml  build.rs
crates/fv_capture_gui/src/: auto_update.rs  i18n.rs  main.rs  ui_fonts.rs
docs/: README.en.md  README.ja.md
docs/releases/: v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.7.2.md
memo/: fvCapture_SPEC.md  test_checklist.md  verification_checklist.md
scripts/: build_readme.py  install.ps1  install.sh  stage_ffmpeg_static.mjs
