[package]
name = "fv_capture_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
device_query = "4.0.1"
font8x8 = "0.3.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
xcap = "0.9.6"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
